@@ -2620,7 +2620,19 @@
 (display '((equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1))))
 (display ", expects ")
 (display '#t)
-(set! *test-ret* (equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1)))(if (equal? *test-ret* '#t) (display " ===> ok\n") (begin (set! *test-error* (cons '(equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1))))))(if (null? *test-error*)
+(set! *test-ret* (equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1)))(if (equal? *test-ret* '#t) (display " ===> ok\n") (begin (set! *test-error* (cons '(equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((equal? 'error (guard (con (#t 'error)) (bytevector-s8-set! -1 (make-bytevector 1)) 1))))))(display "test ")
+(display '((u8-list->bytevector '(1 2 3 4))))
+(display ", expects ")
+(display '#vu8(1 2 3 4))
+(set! *test-ret* (u8-list->bytevector '(1 2 3 4)))(if (equal? *test-ret* '#vu8(1 2 3 4)) (display " ===> ok\n") (begin (set! *test-error* (cons '(u8-list->bytevector '(1 2 3 4)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((u8-list->bytevector '(1 2 3 4))))))(display "test ")
+(display '((equal? 'error (guard (con (#t 'error)) (u8-list->bytevector '(1 2 3 -1 4))))))
+(display ", expects ")
+(display '#t)
+(set! *test-ret* (equal? 'error (guard (con (#t 'error)) (u8-list->bytevector '(1 2 3 -1 4)))))(if (equal? *test-ret* '#t) (display " ===> ok\n") (begin (set! *test-error* (cons '(equal? 'error (guard (con (#t 'error)) (u8-list->bytevector '(1 2 3 -1 4)))) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((equal? 'error (guard (con (#t 'error)) (u8-list->bytevector '(1 2 3 -1 4))))))))(display "test ")
+(display '((bytevector->u8-list #vu8(1 2 3 4))))
+(display ", expects ")
+(display '(1 2 3 4))
+(set! *test-ret* (bytevector->u8-list #vu8(1 2 3 4)))(if (equal? *test-ret* '(1 2 3 4)) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector->u8-list #vu8(1 2 3 4)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector->u8-list #vu8(1 2 3 4))))))(if (null? *test-error*)
 (display "passed.
 ")
 (display *test-error*))
